# mls-ds

./: .doppler.yaml  .env.example  .gitignore  ACTOR_SYSTEM_ENABLED.md  ADMIN_SECURITY_PLAN.md  ARCHITECTURE_DECISION.md  ATPROTO_SERVICE_SETUP.md  BLUESKY_BLOCKS_INTEGRATION.md  CLOUDFLARE_R2_MIGRATION_SUMMARY.md  CLOUDKIT_MLS_ARCHITECTURE.md  CLOUDKIT_REMOVAL_SUMMARY.md  CODEGEN_SETUP.md  COMMIT_ANALYSIS.md  COMMIT_DISTRIBUTION_FIX.md  COMPLETED.md  COMPLETE_PLAN_V2.md  CURRENT_DEPLOYMENT_STATUS.md  Cargo.toml  DATABASE_SCHEMA_FIX.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.txt  DEVELOPER_QUICKSTART.md  DEVICE_LOCAL_KEYCHAIN_CORRECTION.md  DOCKER_MIGRATION_SUMMARY.md  DOCKER_QUICKSTART.md  EPOCH_DESYNC_BUG_ANALYSIS.md  EXECUTION_STATUS.md  EXECUTIVE_SUMMARY.md  EXTERNAL_ACCESS.md  EXTERNAL_COMMITS_IMPLEMENTATION_GUIDE.md  EXTERNAL_COMMITS_IMPLEMENTATION_PLAN.md  EXTERNAL_COMMITS_QUICK_REFERENCE.md  EXTERNAL_COMMITS_TODO.md  FRESH_DEPLOYMENT_COMPLETE.md  GENERATED_TYPES_USAGE.md  GITHUB_PROJECT_TEMPLATE.yaml  GREENFIELD_IMPLEMENTATION_SUMMARY.md  GREENFIELD_MIGRATION_COMPLETE.md  (+86 more)
codegen/: Cargo.toml
codegen/src/: main.rs
e2e-tests/: Cargo.toml
e2e-tests/src/: auth.rs  lib.rs  mls_engine.rs
e2e-tests/tests/: edge_cases.rs  full_flow.rs  multi_user.rs  stress.rs
mls-ffi/: API_FIX_PLAN.md  COMPLETION_REPORT.md  Cargo.toml  FFI_INTEGRATION_GUIDE.md  FFI_SWIFT_BRIDGE.md  FIXES_NEEDED.md  IMPLEMENTATION_SUMMARY.md  IOS_QUICK_START.md  MLSFFIFFI.h  README.md  README_NEW.md  build-ios.sh  build.rs  build_all.sh  build_ios.sh  cbindgen.toml  create-xcframework.sh  uniffi.toml
mls-ffi/MLSFFIFramework.xcframework/: Info.plist
mls-ffi/include/: mls_ffi.h
mls-ffi/src/: api.rs  api.rs.backup  error.rs  ffi.rs  ffi_old.rs  lib.rs  mls_context.rs  mls_context.rs.old  tests.rs  types.rs
server/: .dockerignore  .env.docker  .env.example  .env.production.example  .gitignore  CLAUDE.md  CLEAN_SLATE.md  CLIENT_INTEGRATION_GUIDE.md  Cargo.toml  DATABASE_SCHEMA.md  DB_IMPLEMENTATION_SUMMARY.md  DB_QUICK_REFERENCE.md  DB_USAGE_EXAMPLES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.prebuilt  FIX_SUMMARY.md  IDEMPOTENCY_CHANGES_SUMMARY.md  IDEMPOTENCY_IMPLEMENTATION_PLAN.md  IDEMPOTENCY_INTEGRATION_GUIDE.md  IDEMPOTENCY_MAIN_RS_EXAMPLE.md  IDEMPOTENCY_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LOGGING_REDACTION_AUDIT_REPORT.md  MIGRATION_FIX.md  MLS_KEY_PACKAGE_FIX.md  Makefile  PSK_VERIFICATION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.txt  RATE_LIMITING.md  RATE_LIMITING_IMPLEMENTATION_SUMMARY.md  RATE_LIMITING_QUICK_REFERENCE.md  README.md  SECURITY_FEDERATION_HARDENING_2026-02-14.md  SERIALIZATION_FIX.md  SETUP_SUMMARY.md  WORKSTREAM_TODOS.md  catbird-mls-server.service  (+17 more)
server/.claude/: CLAUDE.md  settings.local.json
server/.sqlx/: query-03f84fb1361db5eb32b88e91ce52d58fc928a0e69ab5e632b85873914c0e7e42.json  query-11d36f7c0a70c8544bcc127279b796c3b0e53b75781f1705dcfaced958807ad6.json  query-230ea702ac650d8f064d4f226f17ac5efa11df1b7ebadf6863aecb41410b69f1.json  query-2337edd4104a7ec98a874faa0fd248e4f56b9d06caeac56e5165dfd3de0ce1e2.json  query-30c2076b3b7a2915e5b5bbcfcb061e23e175320fa8b19cb4242f26d01c7b1b8a.json  query-33a49e470fad32377161882d61bfefc318dd6ae39e147e04f8d828b21d57f606.json  query-392babd15c58d4149ee242631ba2d38ca6ae3e13cd25471792cd7261eb17c7bd.json  query-3aacd3e44e16ef8e7a20db8ce7c3f3f52894b7f2a7582cd00c4e2a4b0e5104f2.json  query-4420c982fe1c3087cccec4b8d515649b1f9ca289ca424e41fa1bf8d7387d9926.json  query-51395c57e7c247466381c0c96a30a42ebdb3468030793f14eaa55e38e62b2b2c.json  query-5166db45ef0744b40613aea061288ce43b184f057d7379415df321c6f6b9e750.json  query-5171354f303e8cf3a984516f0267328e27ae2705e6d007c368b0653b297dbf4e.json  query-525e796a691c6adfad88608f93396c77f6587fd49f9da8b571bd5aa51b851bf6.json  query-572f9065e8230a849014156a5f020697824cbf91da26608df50a57beb4c2a674.json  query-583c73da57162b02ffa8f02a74b0381e6dafea09472e22679b0d3f7ad1fdb23b.json  query-5c15f3bf08f1561fbe742c3e8e89067dabfdc4fe27c22bb64450d7bc542c8668.json  query-6ee3149021b608101c21cb0e265a7264fab577ea35bd9edb1331261429f44296.json  query-71eb608d4e661966448f9e9c88df8077f8ebbf058183d1356d83b39062b22426.json  query-753048895c816894c62953def1c0709287ddfb17f67562442a553af67bea81fb.json  query-7891e061fd793d87d9557e9d9cb38ae5c82a6d43d5d3e30fb7700fdaf79820d2.json  query-7d66b25b4cfff4fdf41559ddad40bb65cf2133329a9e15f797f7df9818f3a06a.json  query-81033f4cb90d02439321d40054a1c9e4ccb31355b5a237a07022c1d347d1c32e.json  query-84086491e8a18a0b198d5e2975c69e444a3ffb65ecf7311bc2097d09007fd48e.json  query-88443e69ad7b66d2f3c0c1f024330c61161b9b241c734c380e3380a3a758449d.json  query-8b03b8983bc9b468f0f8f697c82b48f958b2609f5818200657e45d5d664aa8ab.json  query-9c267e2d664437af3e401be0eeefaca6049812337cd6ae19a805f04a4348aadf.json  query-9d9345119969173d963a748f51e670953b36c19abed74a7739136ba908a32274.json  query-9ddab6d2ee709d162fc8300fa4f39c4aa4cb9b7b6979449e1fae52b595a11b66.json  query-a6d34a282ece7eefeec63acd5ce465b371ab232e4339f31aa0bf05ade3799117.json  query-a971c6da843409bc2a45b8e14ca4b1bd9a5f190c741c9faafd0bb5d4fb509090.json  query-b119e6b7caccdf04007e1956b73facfc6ba3a575d8159cee75be576eec8bdcf8.json  query-b2e04d121df0a3827c8fcc24200dbd79bf9e8e302f57e4cf5ef0faa5afa2250a.json  query-b34f544ef408746dd52d55184fc702f1f8659fdfe6d33feb3185d00c3e06fa1e.json  query-b6be8038cea61c5e98139ba9a8c54fee7baeeaa4b6591b5a906c02daddf6cb73.json  query-b6f4f990d5d5ca30826caf676ac8f9b32be2adbc709e2d8855265fee5fae102e.json  query-bb8cb3e3ff4610155ca4d04f852ab385117b4813076b0260f2057492254fbce5.json  query-bbe3facf6e1141b7424e38a7feba5a68a89a1b7a98ced2f06bc2dfcd4dbc235b.json  query-bd69d462bfe92c867e66e303a18c1bab7c2d340578322889276a538085be7710.json  query-c3f90c6d39dba03166fb2927beb823ad06a3e24c29c6a48355fa7ee2c07b7d2f.json  query-c6efa3cc0c9b90aee7793b8e3c0a4012d8ec45c8d760df2fe2afef63fc902770.json  (+2 more)
server/k8s/: README.md  configmap.yaml  cronjob-backup.yaml  deployment.yaml  hpa.yaml  ingress.yaml  job-migrations.yaml  kustomization.yaml  namespace.yaml  (+4 more)
(+522 files in other folders)
