[package]
name = "mls_ffi"
version = "0.1.0"
edition = "2021"
authors = ["Catbird Team"]
description = "FFI bridge for MLS operations (iOS integration)"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
openmls = "0.5"
openmls_traits = "0.2"
openmls_basic_credential = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cbindgen = "0.26"
