[package]
name = "mls_ffi"
version = "0.1.0"
edition = "2021"
authors = ["Catbird Team"]
description = "FFI bridge for MLS operations (iOS integration)"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
openmls = "0.5"
openmls_traits = "0.2"
openmls_basic_credential = "0.2"
openmls_rust_crypto = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tls_codec = "0.3"
thiserror = "1.0"
libc = "0.2"
zeroize = { version = "1.7", features = ["derive"] }
base64 = "0.21"

[build-dependencies]
cbindgen = "0.26"

[dependencies.hex]
version = "0.4"
