[package]
name = "mls_ffi"
version = "0.1.0"
edition = "2021"
authors = ["Catbird Team"]
description = "FFI bridge for MLS operations (iOS integration)"

[lib]
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
openmls = "0.6"
openmls_traits = "0.3"
openmls_basic_credential = "0.3"
openmls_rust_crypto = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tls_codec = "0.4"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1.11", features = ["v4"] }
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

