[package]
name = "catbird-server"
version = "0.1.0"
edition = "2021"
authors = ["Catbird Team"]
description = "Private MLS group chat server with ATProto identity"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "macros", "uuid", "chrono"] }

# MLS
openmls = "0.5"
openmls_traits = "0.2"
openmls_basic_credential = "0.2"

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"

# Auth/JWT
jsonwebtoken = "9"

# HTTP client (for DID resolution)
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
