[package]
name = "catbird-server"
version = "0.1.0"
edition = "2021"
authors = ["Catbird Team"]
description = "Private MLS group chat server with ATProto identity"

[dependencies]
p256 = { version = "0.13", features = ["ecdsa"] }
k256 = { version = "0.13", features = ["ecdsa"] }
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

# Realtime / SSE
async-trait = "0.1"
ulid = "1.1"
http = "1.0"
serde_bytes = "0.11"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "uuid", "chrono", "migrate"] }

# MLS
openmls = "0.7.2"
openmls_traits = "0.4.1"
openmls_basic_credential = "0.4"
openmls_rust_crypto = "0.4"

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
multibase = "0.9"

# Auth/JWT
jsonwebtoken = "9"

# ATProto/Atrium
atrium-api = "0.25"
atrium-xrpc = "0.12"
atrium-xrpc-client = "0.5"

# HTTP client (for DID resolution)
reqwest = { version = "0.11", features = ["json"] }

# Caching and rate limiting
moka = { version = "0.12", features = ["future", "sync"] }
governor = "0.6"

# Async primitives
parking_lot = "0.12"

# Actor system
ractor = "0.12"
dashmap = "6.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
once_cell = "1.19"

# Push notifications
a2 = "0.10"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.13"
prometheus = "0.13"

# WebSocket support for subscriptions
tokio-tungstenite = "0.21"
serde_ipld_dagcbor = "0.6"
hex = "0.4.3"
tls_codec = "0.4.2"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3"


[features]
default = ["namespace-bluecatbird"]
namespace-bluecatbird = []
